Try to fix mobile alignment

--- a/static/css/styles-available_creations.css
+++ b/static/css/styles-available_creations.css
@@ -1,6 +1,6 @@
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 700px) {
-    .column, .navbar {   
+    .row, .navbar {   
       flex-direction: column;
     }
   }
